USAGOV-1469-Homepage-changes-grid-alignment: Fix all topics header

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -278,6 +278,11 @@
   background-color: var($deep-blue);
 }
 
+/* Life Events */
+.life-events-intro {
+  padding-left: 58px;
+}
+
 /* All Topics Header */
 .all-topics-header {
   background-color: var($white);
@@ -291,9 +296,10 @@
     font-size: 2.44em;
     //uswds font-weight mixin
     @include u-text('bold');
-    margin: 65px 5vw 0;
-    max-width: 90%;
+    margin: 65px auto 0;
+    max-width: var($homepage, larger-max-width);
     padding: 0;
+    padding-bottom: 5px;
     text-align: left;
   }
 }
@@ -428,13 +434,6 @@
     padding-top: 20px;
   }
 
-  .all-topics-header h2 {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: var($homepage, larger-max-width);
-    padding: 0 0 5px 75px;
-  }
-
   .homepage-card_header {
     padding-left: 0;
     padding-right: 0;
@@ -459,13 +458,6 @@
 
   .life-events h2 {
     padding-top: 20px;
-  }
-
-  .all-topics-header h2 {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: var($homepage, larger-max-width);
-    padding: 0 0 5px 75px;
   }
 
   .homepage-card_header {
@@ -502,7 +494,6 @@
     margin-left: 0;
     margin-right: auto;
     max-width: var($homepage, smaller-max-width);
-    padding: 0 0 0 58px;
   }
 
   .how-button-list {
@@ -512,5 +503,20 @@
   .how-button {
     flex: 1 1 0%;
     min-height: 60px;
+  }
+}
+
+/* All topics 3 cards */
+@media (max-width: 1199px) {
+  .smaller-width-div {
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .all-topics-header h2 {
+    max-width: var($homepage, smaller-max-width);
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 58px;
   }
 }
